# File-Janitor

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: fs_ops.hxx  result_types.hxx  safe_fs.hxx
include/file_janitor/: constants.hxx  display.hxx  errors.hxx  filesystem_ops.hxx  organization.hxx  types.hxx
include/fs_ops/: fs_ops.hxx  movement_plan.hxx  operation_result.hxx
include/fs_ops/executor/: execution_report.hxx  executor.hxx
include/fs_ops/planner/: planner.hxx
include/fs_ops/scanner/: scanner.hxx
modules/: filejanitor-execution_report.cppm  filejanitor-executor.cppm  filejanitor-fs_ops.cppm  filejanitor-movement_plan.cppm  filejanitor-operation_result.cppm  filejanitor-planner.cppm  filejanitor-result_types.cppm  filejanitor-safe_fs.cppm  filejanitor-scanner.cppm  filejanitor.cppm
src/: display.cxx  filesystem_ops.cxx  fs_ops.cxx  main.cxx  organization.cxx  safe_fs.cxx
src/fs_ops/: operation_result.cpp
src/fs_ops/executor/: execution_report.cxx  executor.cxx
src/fs_ops/planner/: planner.cxx
src/fs_ops/scanner/: scanner.cxx
